2012-10-22  Siddhesh Poyarekar  <siddhesh@redhat.com>

2012-10-22  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* pthread_cond_timedwait.c (__pthread_cond_timedwait): Time out
	if absolute timeout is negative.
	[__ASSUME_FUTEX_CLOCK_REALTIME &&
	lll_futex_timed_wait_bitset]: Use lll_futex_timed_wait_bitset.
	* sysdeps/unix/sysv/linux/powerpc/lowlevellock.h
	(lll_futex_timed_wait_bitset): New macro.
	* sysdeps/unix/sysv/linux/s390/lowlevellock.h
	(lll_futex_timed_wait_bitset): Likewise.

2012-10-25  Roland McGrath  <roland@hack.frob.com>

	* tst-cond-except.c (TEST_FUNCTION): New macro.

2012-10-25  Joseph Myers  <joseph@codesourcery.com>

	* Makefile ($(objpfx)tst-tls6.out): Use $(BASH) not $(SHELL) to
	run tst-tls6.sh.
	* tst-tls6.sh: Use /bin/bash not /bin/sh.

2012-10-25  Roland McGrath  <roland@hack.frob.com>

	* tst-basic2.c (do_test): Return RESULT, not always zero.

	* tst-cond25.c: Include <stdint.h>
	(waiter): Add casts to uintptr_t between casting integer<->pointer.
	(timed_waiter): Likewise.
	(do_test_wait): Likewise.
	* tst-cond-except.c (thr): Likewise.
	(do_test): Use prototype definition.

2012-10-24  Joseph Myers  <joseph@codesourcery.com>
	    Jim Blandy  <jimb@codesourcery.com>

	* Makefile ($(objpfx)tst-tls6.out): Pass $(test-wrapper-env) to
	tst-tls6.sh.
	* tst-tls6.sh (test_wrapper_env): New variable.  Use it to run
	programs with LD_PRELOAD set.

2012-10-24  Roland McGrath  <roland@hack.frob.com>

	* Makefile ($(objpfx)tst-cond11, $(objpfx)tst-cond19): Targets removed.
	($(objpfx)tst-sem5, $(objpfx)tst-cancel18): Likewise.
	((objpfx)tst-cancelx18, $(objpfx)tst-clock2): Likewise.
	($(objpfx)tst-rwlock14): Likewise.

2012-10-24  Joseph Myers  <joseph@codesourcery.com>

	* Makefile (tests): Remove tst-oddstacklimit.
	(test-srcs): New variable.
	(tst-oddstacklimit-ENV): Remove.
	[$(run-built-tests) = yes] (tests): Depend on
	$(objpfx)tst-oddstacklimit.out.
	[$(run-built-tests) = yes] ($(objpfx)tst-oddstacklimit.out): New
	target.